# spacy-universal-sentence-encoder

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  build_models.sh  build_use.sh  create.py  requirements.txt  setup.cfg  setup.py
.github/: run-tests.sh
.github/scripts/: run-tests.sh
.github/workflows/: push.yml  tests.yml
docker/: Dockerfile  README.md
meta/: en_use_lg.json  en_use_md.json  meta.json  xx_use_lg.json  xx_use_md.json
spacy_universal_sentence_encoder/: __init__.py  language.py  util.py
spacy_universal_sentence_encoder/meta/: en_use_cmlm_lg.json  en_use_cmlm_md.json  en_use_lg.json  en_use_md.json  xx_use_cmlm.json  xx_use_cmlm_br.json  xx_use_lg.json  xx_use_md.json
tests/: test_config.py  test_load_nlp.py  test_similarity.py  utils.py
universal_sentence_encoder/: __init__.py  language.py  util.py
