[metadata]
version = 0.3.1
description = SpaCy models for using Universal Sentence Encoder from TensorFlow Hub
description-file = README.md
url = https://github.com/MartinoMensio/spacy-universal-sentence-encoder
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
include_package_data = true
install_requires =
    tensorflow==2.2.0
    tensorflow-text>=2.2.0,<2.3.0 # for xx_use_lg
    spacy>=2.1.0,<2.4.0
    tensorflow-hub

[options.entry_points]
spacy_factories =
    use_overwrite_vectors = spacy_universal_sentence_encoder:OverwriteVectors
    use_add_model_to_doc = spacy_universal_sentence_encoder:AddModelToDoc