[metadata]
version = 0.4.2
description = SpaCy models for using Universal Sentence Encoder from TensorFlow Hub
description-file = README.md
url = https://github.com/MartinoMensio/spacy-universal-sentence-encoder
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
include_package_data = true
install_requires =
    tensorflow>=2.4.0,<3.0.0
    spacy>=3.0.0,<4.0.0
    tensorflow-hub

[options.extras_require]
multi = tensorflow-text>=2.4.0,<3.0.0 # for multilingual models (xx_use_lg and xx_use_md)


[options.entry_points]
spacy_factories =
    universal_sentence_encoder = spacy_universal_sentence_encoder.language:UniversalSentenceEncoder