[metadata]
version = 0.4.6
description = SpaCy models for using Universal Sentence Encoder from TensorFlow Hub
description-file = README.md
url = https://github.com/MartinoMensio/spacy-universal-sentence-encoder
author = Martino Mensio
author_email = martino.mensio@open.ac.uk

[options]
include_package_data = true
install_requires =
    tensorflow>=2.4.0,<3.0.0
    spacy>=3.0.0,<4.0.0
    tensorflow-hub

[options.extras_require]
# for multilingual models (xx_use_lg and xx_use_md)
multi = 
    tensorflow-text>=2.4.0,<3.0.0; python_version!="3.8" and python_version!="3.9" and python_version!="3.11"
    tensorflow-text>=2.9.0; python_version=="3.8" or python_version=="3.9" # weird bug in 3.8 that downloads all the versions
    tensorflow-text; python_version=="3.11" # allow to download rc versions


[options.entry_points]
spacy_factories =
    universal_sentence_encoder = spacy_universal_sentence_encoder.language:UniversalSentenceEncoder